--- a/opdracht_22_eventhandlers/index.html
+++ b/opdracht_22_eventhandlers/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body class="blue-background">
+	/* Bas was here */
     <button id="mybutton" type="button" class="btn-alert">Alert Me!</button>
     <button id="mybutton2" type="button" class="btn-color">Change</button>
 </body>
